Colab을 통해 생성됨ㅣ

--- a/FineTuning.ipynb
+++ b/FineTuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPyLhDSm13hqt3DBhY6eMDL",
+      "authorship_tag": "ABX9TyNmnPhlgEc+H5wBOygmu73X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1641,7 +1641,7 @@
         "id": "L5h7Y4QGxZfN",
         "outputId": "ea7daf67-d9b8-42a7-dcca-00c7e1504afc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1751,7 +1751,7 @@
       "metadata": {
         "id": "FV1ARFflwQhj"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1935,7 +1935,7 @@
         },
         "outputId": "baea5e90-8c6b-4061-e229-184da0127946"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1984,7 +1984,7 @@
       "metadata": {
         "id": "-CRkZ5UNwv1m"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2008,7 +2008,7 @@
       "metadata": {
         "id": "IpZBdiUhwI64"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2283,7 +2283,7 @@
         "id": "NMDZNdMmtWuW",
         "outputId": "f0f78952-0a44-4fad-efc5-912d1e630d23"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2411,7 +2411,7 @@
         "id": "EKfEW-Hayrqo",
         "outputId": "640a59a4-7104-4788-c845-d81457b7d235"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2524,7 +2524,7 @@
         "id": "eC8ZXTdAAyxI",
         "outputId": "f7c9bc5f-ecb1-4433-aa2f-1bd89cceb47f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2592,9 +2592,278 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "import random\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from torch.utils.data import DataLoader, Dataset\n",
+        "from facenet_pytorch import InceptionResnetV1\n",
+        "from torchvision import transforms\n",
+        "from PIL import Image\n",
+        "\n",
+        "# 1. GPU 장치 설정\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# 2. 모델 정의\n",
+        "model = InceptionResnetV1(pretrained='vggface2').train().to(device)\n",
+        "\n",
+        "# 3. 트리플렛 손실 함수와 최적화 함수 정의\n",
+        "criterion = nn.TripletMarginLoss(margin=1.0, p=2)\n",
+        "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "class TripletDataset(Dataset):\n",
+        "    def __init__(self, dataset_path, transform=None):\n",
+        "        self.dataset_path = dataset_path\n",
+        "        self.transform = transform\n",
+        "        self.classes = os.listdir(dataset_path)\n",
+        "        self.class_to_idx = {cls_name: idx for idx, cls_name in enumerate(self.classes)}\n",
+        "        self.imgs = self.make_dataset()\n",
+        "\n",
+        "    def make_dataset(self):\n",
+        "        imgs = []\n",
+        "        for class_name in self.classes:\n",
+        "            class_path = os.path.join(self.dataset_path, class_name)\n",
+        "            img_names = os.listdir(class_path)\n",
+        "            for i in range(len(img_names) - 1):\n",
+        "                anchor_img = img_names[i]\n",
+        "                positive_img = img_names[i + 1]\n",
+        "                for other_class_name in self.classes:\n",
+        "                    if other_class_name != class_name:\n",
+        "                        other_class_path = os.path.join(self.dataset_path, other_class_name)\n",
+        "                        negative_img = random.choice(os.listdir(other_class_path))\n",
+        "                        imgs.append((os.path.join(class_path, anchor_img), os.path.join(class_path, positive_img), os.path.join(other_class_path, negative_img)))\n",
+        "        return imgs\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "        anchor_path, positive_path, negative_path = self.imgs[index]\n",
+        "        anchor_img = Image.open(anchor_path)\n",
+        "        positive_img = Image.open(positive_path)\n",
+        "        negative_img = Image.open(negative_path)\n",
+        "\n",
+        "        if self.transform is not None:\n",
+        "            anchor_img = self.transform(anchor_img)\n",
+        "            positive_img = self.transform(positive_img)\n",
+        "            negative_img = self.transform(negative_img)\n",
+        "\n",
+        "        return anchor_img, positive_img, negative_img\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.imgs)\n",
+        "\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((224, 224)),\n",
+        "    transforms.ToTensor(),\n",
+        "])\n",
+        "\n",
+        "dataset = TripletDataset('dataset/', transform=transform)\n",
+        "dataloader = DataLoader(dataset, batch_size=1, shuffle=True, drop_last=True)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# 학습 루프\n",
+        "num_epochs = 1000\n",
+        "for epoch in range(num_epochs):\n",
+        "    model.train()\n",
+        "    running_loss = 0.0\n",
+        "    for i, data in enumerate(dataloader, 0):\n",
+        "        anchor, positive, negative = data\n",
+        "        anchor, positive, negative = anchor.to(device), positive.to(device), negative.to(device)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        target_batch_size = 32  # 원하는 배치 크기\n",
+        "\n",
+        "        # 가짜 배치 크기로 확장\n",
+        "        anchor = expand_batch(anchor, target_batch_size)\n",
+        "        positive = expand_batch(positive, target_batch_size)\n",
+        "        negative = expand_batch(negative, target_batch_size)\n",
+        "\n",
+        "        # 모델에 입력\n",
+        "        anchor_embedding = model(anchor)\n",
+        "        positive_embedding = model(positive)\n",
+        "        negative_embedding = model(negative)\n",
+        "        loss = criterion(anchor_embedding, positive_embedding, negative_embedding)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        running_loss += loss.item()\n",
+        "\n",
+        "        print(f'[Epoch {epoch + 1}, Batch {i + 1}] loss: {running_loss / 10:.3f}')\n",
+        "        running_loss = 0.0\n",
+        "\n",
+        "print('Finished Training')\n",
+        "\n",
+        "# 4. 임베딩 벡터 계산 및 분류 함수 정의\n",
+        "def get_embedding(model, image):\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        image = image.to(device)\n",
+        "        embedding = model(image.unsqueeze(0))\n",
+        "    return embedding\n"
+      ],
       "metadata": {
         "id": "m-2dtHUuA05F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "########################################"
+      ],
+      "metadata": {
+        "id": "ogWGY6vsU9QG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import random\n",
+        "from PIL import Image\n",
+        "import torch\n",
+        "from torch.utils.data import Dataset, DataLoader, random_split\n",
+        "import torchvision.transforms as transforms\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from facenet_pytorch import InceptionResnetV1\n",
+        "\n",
+        "# GPU 장치 설정\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "\n",
+        "# 모델 정의\n",
+        "model = InceptionResnetV1(pretrained='vggface2').train().to(device)\n",
+        "\n",
+        "# 트리플렛 손실 함수와 최적화 함수 정의\n",
+        "criterion = nn.TripletMarginLoss(margin=1.0, p=2)\n",
+        "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+        "\n",
+        "class TripletDataset(Dataset):\n",
+        "    def __init__(self, dataset_path, transform=None):\n",
+        "        self.dataset_path = dataset_path\n",
+        "        self.transform = transform\n",
+        "        self.classes = os.listdir(dataset_path)\n",
+        "        self.class_to_idx = {cls_name: idx for idx, cls_name in enumerate(self.classes)}\n",
+        "        self.imgs = self.make_dataset()\n",
+        "\n",
+        "    def make_dataset(self):\n",
+        "        imgs = []\n",
+        "        for class_name in self.classes:\n",
+        "            class_path = os.path.join(self.dataset_path, class_name)\n",
+        "            img_names = os.listdir(class_path)\n",
+        "            for img_name in img_names:\n",
+        "                anchor_img = img_name\n",
+        "                positive_img = random.choice([img for img in img_names if img != anchor_img])\n",
+        "                negative_class = random.choice([cls for cls in self.classes if cls != class_name])\n",
+        "                negative_class_path = os.path.join(self.dataset_path, negative_class)\n",
+        "                negative_img = random.choice(os.listdir(negative_class_path))\n",
+        "                imgs.append((os.path.join(class_path, anchor_img),\n",
+        "                             os.path.join(class_path, positive_img),\n",
+        "                             os.path.join(negative_class_path, negative_img)))\n",
+        "        return imgs\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "        anchor_path, positive_path, negative_path = self.imgs[index]\n",
+        "        anchor_img = Image.open(anchor_path).convert('RGB')\n",
+        "        positive_img = Image.open(positive_path).convert('RGB')\n",
+        "        negative_img = Image.open(negative_path).convert('RGB')\n",
+        "\n",
+        "        if self.transform is not None:\n",
+        "            anchor_img = self.transform(anchor_img)\n",
+        "            positive_img = self.transform(positive_img)\n",
+        "            negative_img = self.transform(negative_img)\n",
+        "\n",
+        "        return anchor_img, positive_img, negative_img\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.imgs)\n",
+        "\n",
+        "# 데이터셋 나누기\n",
+        "def split_dataset(dataset, train_ratio=0.7, eval_ratio=0.1, test_ratio=0.2):\n",
+        "    train_size = int(train_ratio * len(dataset))\n",
+        "    eval_size = int(eval_ratio * len(dataset))\n",
+        "    test_size = len(dataset) - train_size - eval_size\n",
+        "    return random_split(dataset, [train_size, eval_size, test_size])\n",
+        "\n",
+        "transform = transforms.Compose([\n",
+        "    transforms.Resize((224, 224)),\n",
+        "    transforms.ToTensor(),\n",
+        "])\n",
+        "\n",
+        "dataset = TripletDataset('dataset/', transform=transform)\n",
+        "train_dataset, eval_dataset, test_dataset = split_dataset(dataset)\n",
+        "\n",
+        "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+        "eval_loader = DataLoader(eval_dataset, batch_size=32, shuffle=False)\n",
+        "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+        "\n",
+        "# 학습 루프\n",
+        "num_epochs = 10\n",
+        "for epoch in range(num_epochs):\n",
+        "    model.train()\n",
+        "    running_loss = 0.0\n",
+        "    for i, data in enumerate(train_loader, 0):\n",
+        "        anchor, positive, negative = data\n",
+        "        anchor, positive, negative = anchor.to(device), positive.to(device), negative.to(device)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        anchor_embedding = model(anchor)\n",
+        "        positive_embedding = model(positive)\n",
+        "        negative_embedding = model(negative)\n",
+        "        loss = criterion(anchor_embedding, positive_embedding, negative_embedding)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        running_loss += loss.item()\n",
+        "\n",
+        "        if i % 10 == 9:  # 매 10 미니 배치마다 출력\n",
+        "            print(f'[Epoch {epoch + 1}, Batch {i + 1}] loss: {running_loss / 10:.3f}')\n",
+        "            running_loss = 0.0\n",
+        "\n",
+        "    # 검증 루프\n",
+        "    model.eval()\n",
+        "    eval_loss = 0.0\n",
+        "    with torch.no_grad():\n",
+        "        for i, data in enumerate(eval_loader, 0):\n",
+        "            anchor, positive, negative = data\n",
+        "            anchor, positive, negative = anchor.to(device), positive.to(device), negative.to(device)\n",
+        "\n",
+        "            anchor_embedding = model(anchor)\n",
+        "            positive_embedding = model(positive)\n",
+        "            negative_embedding = model(negative)\n",
+        "            loss = criterion(anchor_embedding, positive_embedding, negative_embedding)\n",
+        "            eval_loss += loss.item()\n",
+        "\n",
+        "    print(f'[Epoch {epoch + 1}] Eval loss: {eval_loss / len(eval_loader):.3f}')\n",
+        "print('Finished Training')\n",
+        "\n",
+        "# 테스트 루프\n",
+        "model.eval()\n",
+        "test_loss = 0.0\n",
+        "with torch.no_grad():\n",
+        "    for i, data in enumerate(test_loader, 0):\n",
+        "        anchor, positive, negative = data\n",
+        "        anchor, positive, negative = anchor.to(device), positive.to(device), negative.to(device)\n",
+        "\n",
+        "        anchor_embedding = model(anchor)\n",
+        "        positive_embedding = model(positive)\n",
+        "        negative_embedding = model(negative)\n",
+        "        loss = criterion(anchor_embedding, positive_embedding, negative_embedding)\n",
+        "        test_loss += loss.item()\n",
+        "print(f'Test loss: {test_loss / len(test_loader):.3f}')\n",
+        "\n",
+        "# 임베딩 벡터 계산 및 분류 함수 정의\n",
+        "def get_embedding(model, image):\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        image = image.to(device)\n",
+        "        embedding = model(image.unsqueeze(0))\n",
+        "    return embedding\n"
+      ],
+      "metadata": {
+        "id": "FAb1y9VOU92F"
       },
       "execution_count": null,
       "outputs": []
